[build-system]
requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

[project]
authors = [
  {name = "Cory Burlison", email = "coryburlison@gmail.com"}
]
maintainers = [
  {name = "Cory Burlison", email = "coryburlison@gmail.com"}
]
name = "Forged"
version = "0.0.0001"
description = "Forged game"